--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,12 @@ importlib_metadata==7.1.0
 ipykernel==6.29.4
 ipython==8.25.0
 jedi==0.19.1
+Jinja2==3.1.4
 jupyter_client==8.6.2
 jupyter_core==5.7.2
 kiwisolver==1.4.5
 locket==1.0.0
+MarkupSafe==2.1.5
 matplotlib==3.9.0
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
@@ -49,6 +51,7 @@ PyYAML==6.0.1
 pyzmq==26.0.3
 requests==2.32.3
 scipy==1.13.1
+seaborn==0.13.2
 six==1.16.0
 stack-data==0.6.3
 statsmodels==0.14.2
